Mon Jan  3 09:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Thread_Manager_Test.cpp:
        * tests/Conn_Test.cpp:
          Fixed compile errors with VxWorks and ACE_HAS_PTHREADS

Mon Jan  3 09:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
          Added include of vxCpu.h to get the CPU defines from VxWorks
          so that we can determine if we use pentium or not

Sun Jan  2 13:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Thread_Manager_Test.cpp:
          Fixed compile errors with VxWorks and ACE_HAS_PTHREADS

        * examples/Misc/test_trace.cpp:
          Replaced variable with name _ by trace, this fixes compile warning
          with VxWorks.

Sun Jan  2 13:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Conn_Test.cpp:
          Fixed compile errors with VxWorks and ACE_HAS_PTHREADS

Sun Jan  2 12:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
          When ACE_HAS_PTHREADS is defined, include the VxWorks file
          types/vxTypesOld.h, the header file sys/stat.h uses types from
          this file and is not according to the spec. A TSR has been
          filed to WindRiver to get this corrected, until the time being
          this is the easiest fix because on more places we got problems
          and we only now have one fix that is easily to remove

Sun Jan  2 12:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Thread_Manager.cpp:
          VxWorks deliver also a pthread implementation. This can be used by
          defined ACE_HAS_PTHREADS, but when this is set, we don't need to use
          some special VxWorks code.

Sun Jan  2 11:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.cpp:
          Fixed compile problem when ACE_LACKS_MKTEMP is defined
