@@ -1,10 +1,10 @@
-// file      : TMCast/Protocol.cpp
+// file      : ACE_TMCast/Protocol.cpp
 // author    : Boris Kolpackov <boris@dre.vanderbilt.edu>
 // cvs-id    : $Id$
 
 #include "Protocol.hpp"
 
-namespace TMCast
+namespace ACE_TMCast
 {
   namespace Protocol
   {
