@@ -2,7 +2,7 @@
 // -*- C++ -*-
 // $Id$
 // Definition for Win32 Export directives.
-// This file is generated automatically by generate_export_file.pl TMCast
+// This file is generated automatically by generate_export_file.pl ACE_TMCast
 // ------------------------------
 #ifndef TMCAST_EXPORT_H
 #define TMCAST_EXPORT_H
@@ -19,16 +19,16 @@
 
 #if defined (TMCAST_HAS_DLL) && (TMCAST_HAS_DLL == 1)
 #  if defined (TMCAST_BUILD_DLL)
-#    define TMCast_Export ACE_Proper_Export_Flag
+#    define ACE_TMCast_Export ACE_Proper_Export_Flag
 #    define TMCAST_SINGLETON_DECLARATION(T) ACE_EXPORT_SINGLETON_DECLARATION (T)
 #    define TMCAST_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_EXPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
 #  else /* TMCAST_BUILD_DLL */
-#    define TMCast_Export ACE_Proper_Import_Flag
+#    define ACE_TMCast_Export ACE_Proper_Import_Flag
 #    define TMCAST_SINGLETON_DECLARATION(T) ACE_IMPORT_SINGLETON_DECLARATION (T)
 #    define TMCAST_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_IMPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
 #  endif /* TMCAST_BUILD_DLL */
 #else /* TMCAST_HAS_DLL == 1 */
-#  define TMCast_Export
+#  define ACE_TMCast_Export
 #  define TMCAST_SINGLETON_DECLARATION(T)
 #  define TMCAST_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
 #endif /* TMCAST_HAS_DLL == 1 */
